# rxs

./: CMakeLists.txt  LICENSE  README.md  TODO  read.me
config/: rxs_users
include/logger/: logger.h
include/protocol/: generic.h  internal_types.h  parser.h  protocol_rxs.h  protocol_rxs_client.h  protocol_rxs_server.h  rxs_errno.h  version.h
lib/: CMakeLists.txt
lib/logger/: CMakeLists.txt  logger.c
lib/protocol/: CMakeLists.txt  generic.c  internal_types.c  parser.c  protocol_rxs.c  protocol_rxs_client.c  protocol_rxs_server.c
scripts/cli/: build_install.sh  build_make.sh  build_release.sh  import_libs.sh  install.sh
scripts/srv/: build_install.sh  build_libs.sh  build_make.sh  build_release.sh  import_libs.sh  install.sh  rxsd.sh
tools/client/: CMakeLists.txt  rxs_cli.c
tools/server/: CMakeLists.txt  rxs_srv.c
